--- a/styles/style-loader.css
+++ b/styles/style-loader.css
@@ -8,12 +8,12 @@
 }
 
 .loader-text {
-  color: aqua;
+  color: #00ffff;
   text-align: center;
 }
 
 .loader {
-  color: aquamarine;
+  color: #00ffff;
   margin: 0 auto;
   width: 50px;
   height: 50px;
@@ -33,8 +33,8 @@
   height: 100%;
   background-image: linear-gradient(
     0deg,
-    rgb(255, 0, 221) 0%,
-    rgb(0, 195, 255) 100%
+    #ff00dd 0%,
+    #00ffff 100%
   );
 }
 
